// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupPassword page displays an error if we submit an invalid formatted password 1`] = `
Array [
  <span
    className="error"
  >
    INVALID_PASSWORD
  </span>,
  <span
    className="error"
  >
    MUST_ACCEPT_AGREEMENTS
  </span>,
]
`;

exports[`SignupPassword page displays an error if we submit without accept agreements 1`] = `
<span
  className="error"
>
  MUST_ACCEPT_AGREEMENTS
</span>
`;

exports[`SignupPassword page displays an error if we submit without filling the password 1`] = `
Array [
  <span
    className="error"
  >
    INVALID_PASSWORD
  </span>,
  <span
    className="error"
  >
    INVALID_PASSWORD_MATCH
  </span>,
  <span
    className="error"
  >
    MUST_ACCEPT_AGREEMENTS
  </span>,
]
`;

exports[`SignupPassword page displays an error if we submit without filling the second password 1`] = `
Array [
  <span
    className="error"
  >
    INVALID_PASSWORD_MATCH
  </span>,
  <span
    className="error"
  >
    MUST_ACCEPT_AGREEMENTS
  </span>,
]
`;

exports[`SignupPassword page redirects if we are logged in 1`] = `
<Redirect
  to="/"
/>
`;

exports[`SignupPassword page redirects if we don't have a previous signup state 1`] = `
<Redirect
  to="/"
/>
`;

exports[`SignupPassword page renders without crashing 1`] = `
<section
  className="signup-password section has-bar full-min-height is-flex"
>
  <BackButtonBar
    to="/sign-up/serial"
  />
  <div
    className="container is-spaced mt-0 has-text-centered subtitle is-6"
  >
    <img
      alt="Welcome"
      className="mb-25"
      src="key-icon.png"
    />
    <h2>
      LAST_STEP
    </h2>
  </div>
  <div
    className="container is-spaced mt-0 dots title is-5"
  >
    <h2>
      ---
    </h2>
  </div>
  <div
    className="container is-spaced mt-0 title is-6"
  >
    <h1>
      CREATE_PASSWORD
    </h1>
  </div>
  <div
    className="container is-flex mt-35"
  >
    <form
      className="control"
      onSubmit={[Function]}
    >
      <div
        className="container columns full-height is-flex has-text-centered"
      >
        <div
          className="column is-hidden-mobile"
        />
        <div
          className="column"
        >
          <PasswordToggle
            autoComplete="off"
            input={
              Object {
                "name": "password",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_PASSWORD1"
          />
          <PasswordToggle
            autoComplete="off"
            input={
              Object {
                "name": "retypePassword",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_PASSWORD2"
          />
        </div>
        <div
          className="column info ml-15"
        >
          <div
            className="mb-10"
          >
            PASSWORD_REQ
          </div>
          <ul>
            <li>
              PASSWORD_REQ_ONE_LOWER
            </li>
            <li>
              PASSWORD_REQ_EIGHT_OR_MORE
            </li>
            <li>
              PASSWORD_REQ_AT_LEAST_TWO_LETTERS
            </li>
            <li>
              PASSWORD_REQ_AT_LEAST_ONE_NUMBER
            </li>
          </ul>
        </div>
        <div
          className="column"
        >
          <div
            className="field is-dark"
          >
            <div
              className="control terms-agreement"
            >
              <label
                className="checkbox"
              >
                <input
                  name="termsAgree"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                  value=""
                />
                TERMS_AGREEMENT
              </label>
              <br />
            </div>
          </div>
        </div>
        <div
          className="column"
        >
          <div
            className="field is-grouped is-grouped-centered"
          >
            <p
              className="control"
            >
              <button
                className="button is-primary"
                disabled={false}
                type="submit"
              >
                BTN_CREATE_ACCOUNT
              </button>
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</section>
`;
